app/assets/stylesheets/users.scss
@import "lib";

input{
	color: #666;
}

/* SIGNUP PAGE */

section#signup {
  @include outer-container(60rem);
  background-color: #fff;
  padding: 0 5rem 2rem;

  label{
	  font: 400 0.9rem 'Raleway', helvetica, sans-serif;
	  color: #777;
  }

  input:not([type=checkbox]), textarea{
		display: block;
		padding: 0.5rem;
		width: 400px;
		border-radius: 2px;
		border: 1px solid #aaa;
		margin: 0.5rem 0 1rem;
	  font: 300 1rem 'Raleway', helvetica, sans-serif;
  }

  form {
    margin: 0 auto;
    max-width: 420px;
    u{
   	  font: 400 0.75rem 'Raleway', helvetica, sans-serif;
   	  color: #aaa;
   	  width: 420px;
      display: block;
   	  padding-top: 0.5rem;
    }
  }
}

div.signup-breadcrumb{
  padding-top: 5%;
  @include outer-container(60%);

  div{
    float: left;
    width: calc(50% - 4px);
    padding: 2rem 0;
    font: 400 1.25rem 'Raleway', helvetica, sans-serif;
    text-align: center;
    color: #366;
    border: 1px solid #eee;
    border-bottom: 5px solid #366;

    &:nth-child(1){
      border-right-color: #366;
    }

  }

}

div.additional-info{
  max-width: 60%;
  margin: 0 auto;
  font: 400 0.9rem 'Raleway', helvetica, sans-serif;
  color: #555;
  padding: 2rem 0;
}

span.other textarea#use{
  display: none;
}

div.signup-title, div.login-title{
  font: 400 2rem 'Raleway', helvetica, sans-serif;
  color: #366;
  padding: 2rem 0;
  text-align: center;
  max-width: 60%;
  margin: 0 auto;
}

input.signup-button{
	width: auto !important;
  letter-spacing: 1px;
  background-color: #4bbc9c;
  color: #fff;
  border: none !important;

  &:hover{
  	cursor: pointer;
  }
}

a.forgot-password{
  text-align: center;
  padding: 1rem 0;
  display: block;
  color: #366;
  &:focus{
    text-decoration: underline;
  }
}
/* LOGIN PAGE */

section#login{
  @include outer-container(60rem);
  background-color: #fff;
  padding: 4rem 5rem 8rem;

  label{
    text-align: center;
    color: #366;
    display: block;
  }

 	input:not([type=checkbox]){
		display: block;
		padding: 0.5rem;
		width: 250px;
		border: 1px solid #aaa;
		margin: 0 auto;
	  font: 400 1rem 'Raleway', helvetica, sans-serif;
	  border-bottom: none;

	  &:nth-last-child(3){
		  border-top-left-radius: 3px;
		  border-top-right-radius: 3px;
	  }
 	}
}

div.login-title{
	text-align: center;
}

input.login-button{
	width: calc(252px + 1rem) !important;
  letter-spacing: 1px;
  background-color: #4bbc9c;
  color: #fff;
  border: none !important;

  &:hover{
  	cursor: pointer;
  }
}
.github-info{
  color: #333;
  font-size: 0.85rem;

  a{
    color: #5f9ea0;
  }
}

.fa-github{
  padding-right: 0.5rem;
}

a.github-unauth{
  display: inline;
  float: right;
  color: #cd5c5c;
}

a.github-auth{
  background-color: #789;
  color: #fff;
  padding: 0.5rem 1rem;
  border-radius: 3px;
  display: inline-block;
  margin-top: 0.5rem;
  font-size: 0.85rem;

}

div.info{
  font-size: 0.85rem;
  color: #789;
}

a.delete{
	background-color: #cd5c5c;
	color: #fff;
	padding: 0.5rem 1rem;
	border-radius: 3px;
  font-size: 0.85rem;
}

div#notice{
  display: none;
  position: absolute;
  top: 65px;
  width: 100vw;
  left:0;right:0;
  margin: 0 auto;
  height: 2rem;
  line-height: 2rem !important;
  font: 300 1.1rem 'Raleway', sans-serif;
  background-color: #5cb85c;
  color: #fff;
  z-index: 2;
  text-align: center;
}

div#alert{
  display: none;
  position: absolute;
  top: 65px;
  width: 100vw;
  left:0;right:0;
  margin: 0 auto;
  height: 2rem;
  line-height: 2rem !important;
  font: 300 1.1rem 'Raleway', sans-serif;
  background-color: #cd5c5c;
  color: #fff;
  z-index: 2;
  text-align: center;
}

